--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "date-fns": "^2.28.0",
-    "gray-matter": "^4.0.3",
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "@chakra-ui/icons": "2.0.2",
+    "@chakra-ui/react": "2.2.1",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "date-fns": "2.28.0",
+    "framer-motion": "6.3.11",
+    "gray-matter": "4.0.3",
+    "next": "12.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remark": "14.0.2",
+    "remark-html": "15.0.1"
   }
 }
