--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "gray-matter": "4.0.3",
     "next": "12.1.6",
     "react": "18.2.0",
+    "react-canvas-confetti": "1.3.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "4.4.0",
     "remark": "14.0.2",
     "remark-html": "15.0.1"
   }
