--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
     "date-fns": "2.28.0",
+    "formik": "2.2.9",
     "framer-motion": "6.3.11",
     "gray-matter": "4.0.3",
     "next": "12.1.6",
@@ -19,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
     "remark": "14.0.2",
-    "remark-html": "15.0.1"
+    "remark-html": "15.0.1",
+    "yup": "0.32.11"
   }
 }
