--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "2.2.1",
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "canvas-confetti": "^1.5.1",
     "date-fns": "2.28.0",
     "formik": "2.2.9",
     "framer-motion": "6.3.11",
